; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/regulator/extr_wm8350-regulator.c_wm8350_dcdc25_set_suspend_disable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/regulator/extr_wm8350-regulator.c_wm8350_dcdc25_set_suspend_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.regulator_dev = type { i32 }
%struct.wm8350 = type { i32 }

@WM8350_DCDC2_CONTROL = common dso_local global i32 0, align 4
@WM8350_DC2_HIB_MODE_MASK = common dso_local global i32 0, align 4
@WM8350_DC2_HIB_MODE_DISABLE = common dso_local global i32 0, align 4
@WM8350_DCDC5_CONTROL = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.regulator_dev*)* @wm8350_dcdc25_set_suspend_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wm8350_dcdc25_set_suspend_disable(%struct.regulator_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.regulator_dev*, align 8
  %4 = alloca %struct.wm8350*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.regulator_dev* %0, %struct.regulator_dev** %3, align 8
  %7 = load %struct.regulator_dev*, %struct.regulator_dev** %3, align 8
  %8 = call %struct.wm8350* @rdev_get_drvdata(%struct.regulator_dev* %7)
  store %struct.wm8350* %8, %struct.wm8350** %4, align 8
  %9 = load %struct.regulator_dev*, %struct.regulator_dev** %3, align 8
  %10 = call i32 @rdev_get_id(%struct.regulator_dev* %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  switch i32 %11, label %38 [
    i32 129, label %12
    i32 128, label %25
  ]

12:                                               ; preds = %1
  %13 = load %struct.wm8350*, %struct.wm8350** %4, align 8
  %14 = load i32, i32* @WM8350_DCDC2_CONTROL, align 4
  %15 = call i32 @wm8350_reg_read(%struct.wm8350* %13, i32 %14)
  %16 = load i32, i32* @WM8350_DC2_HIB_MODE_MASK, align 4
  %17 = xor i32 %16, -1
  %18 = and i32 %15, %17
  store i32 %18, i32* %6, align 4
  %19 = load %struct.wm8350*, %struct.wm8350** %4, align 8
  %20 = load i32, i32* @WM8350_DCDC2_CONTROL, align 4
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* @WM8350_DC2_HIB_MODE_DISABLE, align 4
  %23 = or i32 %21, %22
  %24 = call i32 @wm8350_reg_write(%struct.wm8350* %19, i32 %20, i32 %23)
  br label %41

25:                                               ; preds = %1
  %26 = load %struct.wm8350*, %struct.wm8350** %4, align 8
  %27 = load i32, i32* @WM8350_DCDC5_CONTROL, align 4
  %28 = call i32 @wm8350_reg_read(%struct.wm8350* %26, i32 %27)
  %29 = load i32, i32* @WM8350_DC2_HIB_MODE_MASK, align 4
  %30 = xor i32 %29, -1
  %31 = and i32 %28, %30
  store i32 %31, i32* %6, align 4
  %32 = load %struct.wm8350*, %struct.wm8350** %4, align 8
  %33 = load i32, i32* @WM8350_DCDC5_CONTROL, align 4
  %34 = load i32, i32* %6, align 4
  %35 = load i32, i32* @WM8350_DC2_HIB_MODE_DISABLE, align 4
  %36 = or i32 %34, %35
  %37 = call i32 @wm8350_reg_write(%struct.wm8350* %32, i32 %33, i32 %36)
  br label %41

38:                                               ; preds = %1
  %39 = load i32, i32* @EINVAL, align 4
  %40 = sub nsw i32 0, %39
  store i32 %40, i32* %2, align 4
  br label %42

41:                                               ; preds = %25, %12
  store i32 0, i32* %2, align 4
  br label %42

42:                                               ; preds = %41, %38
  %43 = load i32, i32* %2, align 4
  ret i32 %43
}

declare dso_local %struct.wm8350* @rdev_get_drvdata(%struct.regulator_dev*) #1

declare dso_local i32 @rdev_get_id(%struct.regulator_dev*) #1

declare dso_local i32 @wm8350_reg_read(%struct.wm8350*, i32) #1

declare dso_local i32 @wm8350_reg_write(%struct.wm8350*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
